added google auth handling
