# server/src/swagger/base.yaml
@@ -15,6 +15,19 @@ components:
       bearerFormat: JWT
 
   schemas:
+    AuthResponse:
+      type: object
+      properties:
+        _id:
+          type: string
+        email:
+          type: string
+        profileImageUrl:
+          type: string
+        accessToken:
+          type: string
+        refreshToken:
+          type: string
     User:
       type: object
       properties:
@@ -27,7 +40,7 @@ components:
         provider:
           type: string
           enum: [local, google, facebook]
-        profileImage:
+        profileImageUrl:
           type: string
         createdAt:
           type: string
